--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body {
   border-bottom: 1px solid #2a2a2a;
   z-index: 999;
 }
+.project-click {
+  cursor: pointer;
+}
 
 .header-inner {
   text-align: center;
