--- a/style.css
+++ b/style.css
@@ -15,9 +15,6 @@ body {
   border-bottom: 1px solid #2a2a2a;
   z-index: 999;
 }
-.project-click {
-  cursor: pointer;
-}
 
 .header-inner {
   text-align: center;
@@ -73,7 +70,7 @@ body {
   text-align: center;
 }
 
-/* WORK SECTION */
+/* WORK */
 .work {
   max-width: 900px;
   margin: 0 auto;
@@ -87,43 +84,19 @@ body {
 }
 
 .project {
-  margin-bottom: 40px;
-  cursor: pointer;
-}
-
-.thumb {
-  width: 100%;
-  border-radius: 8px;
-  opacity: 0.9;
-  transition: opacity 0.2s;
-}
-
-.thumb:hover {
-  opacity: 1;
-}
-
-.project h3 {
-  margin: 12px 0 4px;
+  margin-bottom: 60px;
 }
 
 .role {
   color: #a7a7a7;
-  font-size: 14px;
-}
-
-.video {
-  margin-top: 15px;
+  margin-bottom: 10px;
 }
 
 .video iframe {
   width: 100%;
-  height: 350px;
+  height: 380px;
   border: none;
   border-radius: 8px;
-}
-
-.hidden {
-  display: none;
 }
 
 /* TESTIMONIALS */
